// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initAuthor should handle git failures 1`] = `
{
  "author": {
    "email": "wayne@warner.com",
    "name": "Wayne Campbell",
  },
  "execCalls": [
    [
      "git config --get user.name",
      [Function],
    ],
    [
      "git config --get user.email",
      [Function],
    ],
  ],
  "inquirerPromptCalls": [
    [
      [
        {
          "default": undefined,
          "message": "What's your name?",
          "name": "authorName",
          "type": "input",
        },
        {
          "default": undefined,
          "message": "Your email?",
          "name": "authorEmail",
          "type": "input",
        },
      ],
    ],
  ],
  "lockReleaseCalls": [
    [
      "cli:input",
    ],
  ],
  "lockTakeCalls": [
    [
      "cli:input",
    ],
  ],
  "logCalls": [
    [
      "debug",
      "✍️ - Initializing author...",
    ],
    [
      "debug",
      "STDERR:
",
      "",
    ],
    [
      "debug",
      "STDERR:
",
      "",
    ],
    [
      "debug",
      "Could not get author from Git",
    ],
  ],
}
`;

exports[`initAuthor should release the lock on failure 1`] = `
{
  "errorCode": "E_PROMPT_ERROR",
  "errorParams": [],
  "execCalls": [
    [
      "git config --get user.name",
      [Function],
    ],
    [
      "git config --get user.email",
      [Function],
    ],
  ],
  "inquirerPromptCalls": [
    [
      [
        {
          "default": "Wayne Campbell",
          "message": "What's your name?",
          "name": "authorName",
          "type": "input",
        },
        {
          "default": "wayne@warner.com",
          "message": "Your email?",
          "name": "authorEmail",
          "type": "input",
        },
      ],
    ],
  ],
  "lockReleaseCalls": [
    [
      "cli:input",
    ],
  ],
  "lockTakeCalls": [
    [
      "cli:input",
    ],
  ],
  "logCalls": [
    [
      "debug",
      "✍️ - Initializing author...",
    ],
  ],
}
`;

exports[`initAuthor should work 1`] = `
{
  "author": {
    "email": "wayne@warner.com",
    "name": "Wayne Campbell",
  },
  "execCalls": [
    [
      "git config --get user.name",
      [Function],
    ],
    [
      "git config --get user.email",
      [Function],
    ],
  ],
  "inquirerPromptCalls": [
    [
      [
        {
          "default": "Wayne Campbell",
          "message": "What's your name?",
          "name": "authorName",
          "type": "input",
        },
        {
          "default": "wayne@warner.com",
          "message": "Your email?",
          "name": "authorEmail",
          "type": "input",
        },
      ],
    ],
  ],
  "lockReleaseCalls": [
    [
      "cli:input",
    ],
  ],
  "lockTakeCalls": [
    [
      "cli:input",
    ],
  ],
  "logCalls": [
    [
      "debug",
      "✍️ - Initializing author...",
    ],
  ],
}
`;
